--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
             <h2>Get Started</h2>
             <p style="color: var(--cream); font-size: 1.1rem; margin-bottom: 3rem;">Send me your messiest spreadsheet or last 3 months of bank statements. I'll analyze one month for free and show you what insights are hiding in your data.</p>
             
-            <form class="contact-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+            <form class="contact-form" action="https://formspree.io/f/xbdywpjq" method="POST">
                 <div class="form-row">
                     <input type="text" name="name" placeholder="Your Name" required>
                     <input type="email" name="email" placeholder="Email Address" required>
